--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@react-three/drei": "^9.80.0",
-    "@react-three/fiber": "^8.11.1",
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
     "@svgr/webpack": "^8.1.0",
     "@vercel/analytics": "^1.0.2",
     "dompurify": "^3.1.6",
@@ -28,12 +28,12 @@
     "maath": "^0.7.0",
     "next": "^15.3.1",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-parallax-tilt": "^1.7.154",
     "react-type-animation": "^3.1.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.155.0"
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
