--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "author": {
-    "name": "Shivam Sharma",
-    "email": "shivamsharma77607@gmail.com",
-    "github": "@Shivam-Sharma-1",
-    "linkedin": "https://www.linkedin.com/in/shivamsharma77607"
+    "name": "Garv Gaba",
+    "email": "garvgaba.gg@gmail.com",
+    "github": "@GarvGaba"
   },
   "scripts": {
     "dev": "next dev",
@@ -16,8 +15,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
-    "@react-three/drei": "^10.0.7",
-    "@react-three/fiber": "^9.1.2",
+    "@react-three/drei": "^9.80.0",
+    "@react-three/fiber": "^8.11.1",
     "@svgr/webpack": "^8.1.0",
     "@vercel/analytics": "^1.0.2",
     "dompurify": "^3.1.6",
@@ -28,8 +27,8 @@
     "maath": "^0.7.0",
     "next": "^15.3.1",
     "next-themes": "^0.2.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-parallax-tilt": "^1.7.154",
     "react-type-animation": "^3.1.0",
     "react-vertical-timeline-component": "^3.6.0",
